--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "project",
+  "name": "workout_planner",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node seeders/seed.js"
   },
-  "author": "sandhiya.J",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.15"
   }
 }
