--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "workout_planner",
+  "name": "crud_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "crud application with express and mongodb",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeders/seed.js"
+    "start": "nodemon server.js"
   },
-  "author": "",
+  "keywords": [
+    "crud",
+    "mongodb"
+  ],
+  "author": "akshay kashyap",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "mongoose": "^5.3.16",
-    "morgan": "^1.9.1",
-    "nodemon": "^2.0.15"
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.11",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
   }
 }
